stuff/style.css
#header{
	position: absolute;
	background-color: #262c36;
	margin-bottom: 20px;
	width: 98vw;
	height: auto;
	border-radius: 5px 5px 5px 5px;
	z-index: 6;
}

#header-button{
	position: relative;
	background-color: #262c36;
	color: white;
	margin-bottom: 8px;
	margin-left: 20px;
	border-radius: 5px;
	border: none;
	z-index: 8;
}

#header-button:hover{
	background-color:#304b6b;
}

#button{
	position: relative;
	background-color: #262c36;
	color: white;
	margin-bottom: 8px;
	margin-left: 20px;
	border-radius: 5px;
	border: none;
}

#button:hover{
	background-color:#304b6b;
}
#file-dialog{
	display: none;
}

#bottom-bar-butts{
	background-color: #304b6b;
	color: white;
	margin-left: 5px;
	height: 50px;
	width: 50px;
	border-radius: 5px;
	border: none;
	margin-top: 5px;
	box-shadow: 0 3px 3px 0 black;

}

#bottom-bar-butts:hover{
	background-color: #6a4d31;
}

#circlenode{
	display: flex;
	align-items: center;
	justify-content: center;
	outline: 1px solid black;
	background-color: white;
	width: 100%; 
	height: 100%; 
	border-radius: 50%;
}

#OriginDiv{
	width: 20px;
	height: 20px;
}

#originNode{
	position: absolute;
	width: 10px;
	height: 10px;
	outline: 1px solid red;
	border-radius: 50%;
	top: 0;
	left: 0;
}

#line-bottom{
	position: absolute;
	margin-top: 8px;
	margin-left: 4.5px;
	width: 1px;
	height: 8px;
	background-color: black;
	z-index: 1;
	top: 0;
	left: 0;
}

#line-right{
	position: absolute;
	margin-left: 8px;
	margin-top: 5px;
	width: 8px;
	height: 1px;
	background-color: black;
	z-index: 1;
	top: 0;
	left: 0;
}

#line-left{
	position: absolute;
	margin-right: 8px;
	margin-top: 5px;
	width: 8px;
	height: 1px;
	background-color: black;
	z-index: 1;
	top: 0;
	left: -30%;
}


#line-top{
	position: absolute;
	margin-top: 5px;
	width: 1px;
	height: 8px;
	background-color: black;
	z-index: 1;
	top: -50%;
	left: 22%;
}

#input{
	width: 90%;
    height: 80%;
    min-width: 100px;
	border-radius: 20px;
    text-align: top-left;
    resize: none;
}

#input2{
	width: 20%;
    height: 60%;
    min-width: 100px;
	border-radius: 20px;
    text-align: top-left;
    resize: none;
}

#textarea{
	width: 50px;
	border-radius: 10px;
}

#rectangle{
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
	outline: 1px solid black;
	width: 100%;
	height: 100%;
    min-height: 30px;
    min-width: 150px;
	border-radius: 5px;
	background-color: white;
    padding: 10;
}


/* Container needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  position: absolute;
  min-width: 80px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
  overflow: hidden;
  height: 0px;
  overflow: hidden;
  transition: height 2s ease;
}

.dropdown-content button {
  background-color: #262c36;
  color: white;
  padding: 5px 16px;
  font-size: 10px;
  text-decoration: none;
  border: none;
  display: block;
  border-radius: 0px 0px 1px 1px;
  height: 0px;
  overflow: hidden;
  transition: height 2s ease;
}

.dropdown-content button:hover {
	background-color: #304b6b;
}

#nodes{
	display: flex;
	align-items: center;
	justify-content: center;
	width: 23.5vw;
	height: 40px;
	background-color: #304b6b;
	border-radius: 20px;
	z-index: 1;
	box-shadow: 0 3px 3px 0 rgba(0,0,0,0.5);
}



#butt{
	color: white;
	background-color: #304b6b;
	border: none;
	width: 100%;
	height: 100%;
	border-radius: 20px;
}

#butt:hover{
	background-color: #6a4d31;
}

#nodes-list{
	border-radius: 20px 20px 0px 0px;
	flex-direction: column;
	margin-left: 2.6vw;
	width: 18vw;
	height: 0px;
	background-color: #2F3A47;
	overflow: auto;
	transition: height 2s ease;
	box-shadow: 0 3px 3px 3px rgba(0, 0.5, 0.5, 0.5); 
}

#coordinates{
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: row;
	width: 15vw;
	height: 35px;
	background-color: #304b6b;
	border-radius: 20px;
}

#coordX{
	margin-right: 10px;
}

#coordXInput{
	width: 50px;
	height: 10px;
	border-radius: 5px;
}

#d{
	display: inline-block;
}

#overlay{
	display: none;
	align-items: center;
	justify-content: center;
	background-color: rgba(0,0,0,0.5)
}

#settings{
	outline-style: ridge;
	outline-color: #262c36;
	position: relative;
	background-color: #1a2a3a;
	height: 80vh;
	width: 50vw;
	overflow: hidden;
	border-radius: 20px;
}

#settingsinput{
	display: block;
	margin-bottom: 5vh;
	width: 95%; 
	height: 90%;
	background-color: #1C283E;
	color: rgba(255, 255, 255, 0.8);
	font-size: 20px;
	border-radius: 10px;
        border-color: rgba(255, 255, 255, 0.2);
        border-style: solid;	
}

#settingsinput:focus{
	outline: none;
}

#magnifyingGlass{
	position: absolute;
	margin-left: 10px;
	width: 5vw;
	height: 8vh;
	background-color: white;
	border-radius: 10px;
}

#exitButt{
	background-color: #262c36;
	margin-left: 84%;
	height: 6vh;
	width: 8vw;
	color: white;
	border-radius: 30px;
}

#settingsContent{
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

#longVertLine{
	height: 70vh;
	width: 2px;
	background-color: rgba(255,255,255,0.08);
}

#configPNG{
	margin-bottom: auto;
	width: 525px;
	height: 200px;
}

#configJSON{
	margin-bottom: auto;
	width: 525px;
	height: 200px;
}

#configStyle{
	margin-bottom: auto;
	width: 525px;
	height: 200px;
}

.sideButtonsBar{
	margin-bottom: auto;
	display: flex;
	flex-direction: column;
}

.sideButtonsBar button{
	width: 10vw;
	height: 10vh;
	border: none;
	background-color: transparent;
	color: rgba(255, 255, 255, 0.8);
	border-left: 1px solid;
	border-color: transparent;
}

.sideButtonsBar button:hover{
	background-color: #213F74;
	border-left: 2px solid;
	border-color: #1D54B7;
	border-radius: 10px;
}
#ExitDiv{
	background-color: #0f1620;
}

#DropdownSelect{
	margin-top: 5px;
	border-radius: 20px;
	padding-right: 100px;
	background-color: rgba(13, 38, 64, 5);
	border-color: rgba(255, 255, 255, 0.2);
	color: white;
	height: 40px;
}

#DropdownSelect option{
	color: rgba(255, 255, 255, 0.2)
}

#DimensionInput{
	border-radius: 20px;
	background-color: rgba(13, 38, 64, 5);
	border-color: rgba(255, 255, 255, 0.2);
	color: rgba(255, 255, 255, 0.8);
}

#DimensionInput{
	outline: none;
}

#searchBar{
	display: flex;
	background-color: #1C283E;
	height: 8vh;
	border-radius: 50px;
}


.ImageDimensionsOptions{
	display: flex;
       	flex-direction: rows;
}

.ImageDimensionsOptions p{
	color: rgba(255, 255, 255, 0.8);
	margin-left: 2%;
}

.ImageDimensionsOptions div{
	display: flex;
	justify-content: center;
	align-items: center;
}

.ImageDimensionsOptions input{
	border-radius: 20px;
	background-color: rgba(13, 38, 64, 5);
	border-color: rgba(255, 255, 255, 0.2);
	color: rgba(255, 255, 255, 0.8);
	outline: none;
}

